test/corpus/phase1_assignment.txt
==================
simple subject assignment:(1) x←1 
==================
x←1
---

(source_file
  (STMT
    (EXPR
      (subExpr
        (lhs (symbol_s))
        (ASGN)
        (subExpr
          (arg
            (subject (atom (symbol_sl (number))))
          )
        )
      )
    )
  )
)

==================
simple subject assignment:(2) x←1‿0 
==================
x←1‿0
---

(source_file
  (STMT
    (EXPR
      (subExpr
        (lhs (symbol_s))
        (ASGN)
        (subExpr
          (arg
            (subject 
              (ANY (atom (symbol_sl (number))))
              (ANY (atom (symbol_sl (number))))
            )
          )
        )
      )
    )
  )
)

==================
simple subject assignment:(3) x‿y←1‿0 
==================
x‿y←1‿0
---

(source_file
  (STMT
    (EXPR
      (subExpr
        (lhs 
          (lhsComp
            (lhsStr
              (LHS_ATOM (LHS_ANY (NAME (symbol_s))))
              (LHS_ATOM (LHS_ANY (NAME (symbol_s))))
            )
          )
        )   
        (ASGN)
        (subExpr
          (arg
            (subject 
              (ANY (atom (symbol_sl (number))))
              (ANY (atom (symbol_sl (number))))
            )
          )
        )
      )
    )
  )
)
