test/corpus/phase4_misc.txt
==================
function in system (1) •file.At ".singeli"
==================
•file.At ".singeli"
---

(source_file (STMT (EXPR (subExpr
  (arg
    (Derv (Func (system_F)))
    (subExpr (arg (subject (atom (symbol_sl (string))))))
	)))))

==================
function in system (1) ⟨8,16‿'c'⟩•bit._cast
==================
⟨8,16‿'c'⟩•bit._cast
---

(source_file (STMT (EXPR
  (FuncExpr
    (Train
      (Fork
        (Derv
          (Operand
            (subject
              (atom
                (array
                  (EXPR
                    (subExpr
                      (arg
                        (subject
                          (atom
                            (symbol_sl
                              (number)))))))
                  (sep)
                  (EXPR
                    (subExpr
                      (arg
                        (subject
                          (ANY
                            (atom
                              (symbol_sl
                                (number))))
                          (ANY
                            (atom
                              (symbol_sl
                                (character))))))))))))
          (mod_1
            (system__m)))))))))

==================
number (1) 1e1
==================
1e1
---

(source_file (STMT (EXPR (subExpr
  (arg
    (subject (atom (symbol_sl (number))))
	)
))))

==================
indentifier with underscore (1) a_b ← 1
==================
a_b ← 1
---

(source_file (STMT (EXPR
  (subExpr
    (lhs (symbol_s))
    (ASGN)
    (subExpr (arg (subject (atom (symbol_sl (number))))))
  ))))
